# server

./: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  gitleaks.yml  lint.yml  push_image.yml  test.yml
context/: models.py
context/migrations/: 0004_module_question_completion_time.py
docker/: entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.test.sh  external_services.yml
kubernetes/certificate/: cert_issuer.yml  certificate.yml  superset_certificate.yml
kubernetes/ingress/: ingress.yml  superset_ingress.yml
kubernetes/server/: celery_worker.yml  kustomization.template.yml  server.yml
kubernetes/superset/: kustomization.template.yml  superset.yml
neatplus/: admin.py  bakery.py  serializers.py  settings.py
neatplus/tests/: __init__.py  test_API.py  test_admin.py
organization/: apps.py  serializers.py  views.py
organization/tests/: test_API.py
project/: apps.py  filters.py  models.py  serializers.py  signals.py
project/tests/: test_API.py
statement/: serializers.py  views.py
summary/: apps.py  serializers.py  views.py
support/: apps.py  models.py
support/management/commands/: import_default_email_template.py
survey/: serializers.py
terraform/: .terraform.lock.hcl  eks_cluster.tf  nat_gateway.tf  providers.tf  rds.tf  redis.tf  variables.tf
user/: apps.py  password_validation.py  serializers.py  tasks.py  views.py
user/tests/: test_API.py
