[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "neatplus-server"
version = "0.0.1"
description = "Neatplus server"
license = "GPL-3.0-only"
authors = ["NEAT plus <contact@neatplus.org>"]
readme = "README.MD"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.13"
Django = "^4.2.16"
environs = { version = "^11.2.1", extras = ["django"] }
marshmallow = "^3.23.1"
uvicorn = { version = "^0.32.1", optional = true, extras = ["standard"] }
gunicorn = { version = "^23.0.0", optional = true }
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework-camel-case = "^1.4.2"
django-admin-interface = "^0.29.2"
django-otp = "^1.5.4"
qrcode = "^8.0"
django-cors-headers = "^4.6.0"
django-silk = "^5.3.1"
django-storages = { version = "^1.14.4", extras = ["boto3"] }
sentry-sdk = "^2.19.0"
celery = { version = "^5.4.0", extras = ["redis"] }
django-modeltranslation = "^0.19.11"
django-ordered-model = "^3.7.4"
drf-spectacular = "^0.27.2"
Pillow = "^11.0.0"
django-ckeditor = "^6.7.1"
djangorestframework-gis = "^1.1"
django-admin-autocomplete-filter = "^0.7.1"
drf-recaptcha = "^4.0.2"
PyYAML = "^6.0.2"
django-mptt = "^0.16.0"
django-oauth-toolkit = "^3.0.1"
watchtower = "^3.3.1"
django-defender = "^0.9.8"
django-reversion = "^5.1.0"
drf-flex-fields = "^1.0.2"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
Werkzeug = "^3.1.3"
model-bakery = "^1.20.0"
ruff = "^0.8.0"

[tool.poetry.extras]
asgi = ["uvicorn", "gunicorn"]

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]
