[project]
name = "neatplus-server"
version = "0.1.0"
description = "Neatplus server"
license = "GPL-3.0-only"
authors = [
    { name = "NEAT plus", email = "contact@neatplus.org" }
]
readme = "README.MD"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.4.0,<6.0.0",
    "django>=4.2.16,<5.0.0",
    "django-admin-autocomplete-filter>=0.7.1,<0.8.0",
    "django-admin-interface>=0.29.2,<0.30.0",
    "django-ckeditor>=6.7.1,<7.0.0",
    "django-cors-headers>=4.6.0,<5.0.0",
    "django-defender>=0.9.8,<0.10",
    "django-filter>=24.3,<25.0",
    "django-modeltranslation>=0.19.11,<0.20.0",
    "django-mptt>=0.16.0,<0.17.0",
    "django-oauth-toolkit>=3.0.1,<4.0.0",
    "django-ordered-model>=3.7.4,<4.0.0",
    "django-otp>=1.5.4,<2.0.0",
    "django-reversion>=5.1.0,<6.0.0",
    "django-silk>=5.3.1,<6.0.0",
    "django-storages[boto3]>=1.14.4,<2.0.0",
    "djangorestframework>=3.15.2,<4.0.0",
    "djangorestframework-camel-case>=1.4.2,<2.0.0",
    "djangorestframework-gis>=1.1,<2.0",
    "djangorestframework-simplejwt>=5.3.1,<6.0.0",
    "drf-flex-fields>=1.0.2,<2.0.0",
    "drf-recaptcha>=4.0.2,<5.0.0",
    "drf-spectacular>=0.27.2,<0.28.0",
    "environs[django]>=11.2.1,<12.0.0",
    "marshmallow>=3.23.1,<4.0.0",
    "pillow>=11.0.0,<12.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "qrcode>=8.0,<9.0",
    "sentry-sdk>=2.19.0,<3.0.0",
    "uvicorn[standard]>=0.32.1,<0.33",
    "watchtower>=3.3.1,<4.0.0",
]

[project.optional-dependencies]
production = [
    "gunicorn>=23,<24",
    "uvicorn>=0.32.1,<0.33",
]

[dependency-groups]
dev = [
    "django-extensions>=3.2.3,<4",
    "model-bakery>=1.20.0,<2",
    "ruff>=0.8.0,<0.9.0",
    "werkzeug>=3.1.3,<4",
]

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]
